--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+  <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
 </head>
 <body>
   <header class="site-header">
@@ -39,7 +40,7 @@
             <li>Photo uploads for Y1 materials</li>
             <li>Teacher approvals & signatures</li>
             <li>Finance, Halls, Sports, and Labs checks</li>
-            <li>Final PDF/CSV/Excel export</li>
+            <li>Final PDF export</li>
           </ul>
         </div>
         <div class="hero-media card glass">
