--- a/templates/student.html
+++ b/templates/student.html
@@ -18,7 +18,7 @@
       </a>
       <nav class="nav">
         <span class="chip">Student</span>
-        <a class="button" href="{{ url_for('login') }}">Sign out</a>
+        <button id="logoutBtn" class="button">Sign out</button>
       </nav>
     </div>
   </header>
@@ -73,7 +73,7 @@
     </div>
   </main>
 
-  <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+  <script type="module" src="{{ url_for('static', filename='js/app.bundle.js') }}"></script>
 </body>
 </html>
 
