Update authentication and templates with user personalization

--- a/templates/finance.html
+++ b/templates/finance.html
@@ -25,7 +25,7 @@
 
   <main class="container">
     <div class="toolbar">
-      <h1 style="margin:0;">Financial Status</h1>
+      <h1 style="margin:0;">Financial Status - {{ user.first_name }} {{ user.last_name }}</h1>
       <input id="financeSearch" class="input" placeholder="Search students…" style="min-width:260px;">
     </div>
     <div class="card glass" style="padding:16px;">
