--- a/templates/subject.html
+++ b/templates/subject.html
@@ -52,7 +52,7 @@
     </div>
   </main>
 
-  <script src="{{ url_for('static', filename='js/app.js') }}"></script>
+  <script type="module" src="{{ url_for('static', filename='js/app.bundle.js') }}"></script>
 </body>
 </html>
 
