--- a/templates/hall.html
+++ b/templates/hall.html
@@ -25,7 +25,7 @@
 
   <main class="container">
     <div class="toolbar">
-      <h1 style="margin:0;">Hall Checks</h1>
+      <h1 style="margin:0;">Hall Checks - {{ user.first_name }} {{ user.last_name }}</h1>
       <input id="hallSearch" class="input" placeholder="Search by room or student…" style="min-width:60px;">
     </div>
     <div class="card glass" style="padding:16px;">
