--- a/templates/lab.html
+++ b/templates/lab.html
@@ -25,7 +25,7 @@
 
   <main class="container">
     <div class="toolbar">
-      <h1 style="margin:0;">Lab Materials</h1>
+      <h1 style="margin:0;">Lab Materials - {{ user.first_name }} {{ user.last_name }}</h1>
       <input id="labSearch" class="input" placeholder="Search students…" style="min-width:260px;">
     </div>
     <div class="card glass" style="padding:16px;">
