--- a/templates/index.html
+++ b/templates/index.html
@@ -8,13 +8,19 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+  
+  <!-- Favicon -->
   <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ url_for('static', filename='images/favicon_io/favicon-32x32.png') }}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ url_for('static', filename='images/favicon_io/favicon-16x16.png') }}">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='images/favicon_io/apple-touch-icon.png') }}">
+  <link rel="manifest" href="{{ url_for('static', filename='images/favicon_io/site.webmanifest') }}">
 </head>
 <body>
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="{{ url_for('home') }}">
-        <span class="brand-mark">E</span>
+        <img class="brand-mark" src="{{ url_for('static', filename='images/favicon_io/favicon-32x32.png') }}" alt="Eclari Logo">
         <span class="brand-text">Eclari</span>
       </a>
       <nav class="nav">
